# Specflow

./: .gitattributes  .gitignore  CHANGELOG.md  CI-INTEGRATION.md  CLAUDE-MD-TEMPLATE.md  CLAUDE.md  CONTRACT-SCHEMA-EXTENSIONS.md  CONTRACT-SCHEMA.md  CONTRACTS-README.md  Cargo.toml  LICENSE  LLM-MASTER-PROMPT.md  MASTER-ORCHESTRATOR.md  META-INSTRUCTION.md  MID-PROJECT-ADOPTION.md  MODEL_ROUTING.md  Makefile  PROMPT-TEMPLATE.md  QUICKSTART.md  README.md  SKILL.md  SPEC-FORMAT.md  SPEC-TO-CONTRACT.md  SUBAGENT-CONTRACTS.md  USER-JOURNEY-CONTRACTS.md  extract-to-project.sh  install-hooks.sh  jest.config.js  package-lock.json  package.json  setup-project.sh  verify-setup.sh
agents/: PROTOCOL.md  README.md  WORKFLOW.md  board-auditor.md  builder-guidance.md  contract-generator.md  contract-test-generator.md  contract-validator.md  db-coordinator.md  dependency-mapper.md  e2e-test-auditor.md  edge-function-builder.md  frontend-builder.md  heal-loop.md  issue-lifecycle.md  journey-enforcer.md  journey-gate.md  journey-tester.md  migration-builder.md  playwright-from-specflow.md  pre-flight-simulator.md  quality-gate.md  readme-audit.md  readme-restructure.md  specflow-uplifter.md  specflow-writer.md  sprint-executor.md  test-runner.md  ticket-closer.md  waves-controller.md
backlog/: demo-improvement-synthesis.md
blog/: 06-implementation.md  08-summary.md
context/: CLAUDE-CODE-SKILL.md  MASTER-ORCHESTRATOR.md  META-INSTRUCTION.md  SPEC-TO-CONTRACT.md  SUBAGENT-CONTRACTS.md
docs/: DESIGNER-GUIDE.md  DOC-INDEX.md  JOURNEY-VERIFICATION-HOOKS.md  LEARNING-INJECTION-SPEC.md  (+12 more)
(+401 files in other folders)
