[package]
name = "specflow"
version = "0.2.0"
edition = "2021"
description = "Specs that enforce themselves — contract-driven development CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
glob = "0.3"
colored = "2"
walkdir = "2"
anyhow = "1"
